FIX title overflowing at small screen size

--- a/src/scss/abstracts/_breakpoints.scss
+++ b/src/scss/abstracts/_breakpoints.scss
@@ -18,4 +18,10 @@ $breakpoints: (
   "portrait": (
     orientation: portrait,
   ),
+  "height-small": (
+    min-height: 400px,
+  ),
+  "height-medium": (
+    min-height: 600px,
+  ),
 );
