--- a/src/scss/components/_lightbox-modal.scss
+++ b/src/scss/components/_lightbox-modal.scss
@@ -143,12 +143,20 @@
   }
 
   &__title {
-    font-size: 2.4rem;
+    font-size: 1.2rem;
     line-height: 1.3;
     font-weight: bold;
     color: $text-highlight-secondary;
     grid-column: 2 / 3;
     grid-row: 3 / 4;
+
+    @include respond-to("height-small") {
+      font-size: 1.8rem;
+    }
+
+    @include respond-to("height-medium") {
+      font-size: 2.4rem;
+    }
 
     @include respond-to("portrait") {
       position: absolute;
